--- a/css/bootstrap-reboot.css
+++ b/css/bootstrap-reboot.css
@@ -48,11 +48,16 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
-p {
+/*p {
   margin-top: 0;
   margin-bottom: 1rem;
+}*/
+/*mein*/
+p {
+  margin: 0;
+  padding: 0;
 }
-
+/*mein*/
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
